# AgentAuth

./: .gitignore  .pre-commit-config.yaml  AGENT_INSTRUCTIONS.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  adapters.py  alembic.ini  api.py  app.py  dash_app.py  database.py  generate_mock_data.py  main.py  models.py  pyproject.toml  requirements.txt
.agent/: DEV_GUIDE.md
.agent/rules/: quality_gates.md
.agent/workflows/: add-adapter.md  add-alert-adapter.md  add-dashboard-page.md  add-dashboard-view.md  add-integration.md  add-widget.md  run-quality-gates.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  quality.yml
agentauth/: cli.py  main.py
agentauth/alerting/: __init__.py  base.py  engine.py  log.py  slack.py  webhook.py
agentauth/alerting/adapters/: __init__.py  log.py  slack.py  webhook.py
agentauth/api/: router.py  schemas.py
agentauth/core/: adapters.py  config.py  database.py  middleware.py  models.py  registry.py  security.py  utils.py
agentauth/core/adapters/: __init__.py  base.py  gemini_adapter.py  mock_adapter.py
agentauth/dashboard/: app.py  auth_ui.py  base.py  utils.py
agentauth/dashboard/assets/: style.css
agentauth/dashboard/pages/: __init__.py  agents.py  alerts.py  dashboard.py  integrations.py  logs.py  models.py
agentauth/dashboard/widgets/: __init__.py  charts.py  metrics.py  tables.py
alembic/: env.py
alembic/versions/: 7f57dab34c52_add_alerting_tables.py  976d87809f03_initial_schema.py  f4fbc65bd6da_add_finops_fields.py
assets/: style.css
scripts/: generate_mock_data.py
tests/: conftest.py  test_alerting.py  test_api.py  test_cli.py  test_core.py  test_coverage_boost.py  test_coverage_final.py  test_dashboard.py  test_improvements.py  test_main.py  test_registry.py
tests/alerting/: test_base.py  test_engine.py
tests/alerting/adapters/: test_adapters.py
tests/api/: test_router.py  test_schemas.py
tests/core/: test_config.py  test_database.py  test_middleware.py  test_models.py  test_registry.py  test_security.py  test_utils.py
tests/core/adapters/: test_adapters.py
tests/dashboard/: test_app.py  test_utils.py
tests/dashboard/pages/: test_pages.py
tests/dashboard/widgets/: test_widgets.py
