[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentauth"
version = "0.1.0"
description = "IAM and proxy for AI agents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    { name = "Benjamin15" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "plotly",
    "dash",
    "pandas",
    "numpy",
    "requests",
    "cryptography",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "python-multipart",
    "argon2-cffi",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
    "types-requests",
    "types-cachetools",
    "pre-commit",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["agentauth"]
omit = ["tests/*", "scripts/*", "agentauth/__init__.py"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"] # Ignore line length errors (handled by formatter)

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header"]

[tool.ruff.lint.isort]
known-first-party = ["agentauth"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_return_any = true
warn_unused_configs = true

[project.urls]
"Homepage" = "https://github.com/Benjamin15/AgentAuth"

[project.scripts]
agentauth = "agentauth.main:app"

[tool.setuptools]
packages = ["agentauth"]
