[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentauth"
version = "0.1.0"
description = "IAM and proxy for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Benjamin15" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.110.1",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.35",
    "plotly>=5.20.0",
    "dash>=2.16.1",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "cryptography>=42.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "argon2-cffi>=23.1.0",
    "cachetools>=5.3.3",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "types-requests>=2.31.0",
    "types-cachetools>=5.3.3",
    "pre-commit>=3.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["agentauth"]
omit = ["tests/*", "scripts/*", "agentauth/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle
]
ignore = ["E501", "D100", "D104", "D101", "D102", "D103", "D107"] # Ignore line length and missing docstring for now to have a clean pass.

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header"]

[tool.ruff.lint.isort]
known-first-party = ["agentauth"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "agentauth.core.*",
    "agentauth.api.*",
    "agentauth.alerting.*"
]
disallow_untyped_defs = true

[project.urls]
"Homepage" = "https://github.com/Benjamin15/AgentAuth"

[project.scripts]
agentauth = "agentauth.cli:main"

[tool.setuptools]
packages = ["agentauth"]
